--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
+plugins {
+    id 'org.gretty' version '4.0.0'
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'war'
-apply plugin: 'jetty'
 
-sourceCompatibility = 1.6
-version = '0.5.0'
+sourceCompatibility = 1.8
+version = '0.8.1'
 compileJava.options.encoding = 'UTF-8'
 
 repositories {
@@ -12,10 +15,10 @@ repositories {
 }
 
 dependencies {
-    compile group: 'net.sourceforge.saxon', name: 'saxon', version: '9.1.0.8'
-    compile group: 'net.sourceforge.saxon', name: 'saxon', version: '9.1.0.8', classifier: 's9api'
-    compile group: 'net.sourceforge.saxon', name: 'saxon', version: '9.1.0.8', classifier: 'dom'
-    compile group: 'net.sourceforge.saxon', name: 'saxon', version: '9.1.0.8', classifier: 'xpath'
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    implementation group: 'net.sourceforge.saxon', name: 'saxon', version: '9.1.0.8'
+    implementation group: 'net.sourceforge.saxon', name: 'saxon', version: '9.1.0.8', classifier: 's9api'
+    implementation group: 'net.sourceforge.saxon', name: 'saxon', version: '9.1.0.8', classifier: 'dom'
+    implementation group: 'net.sourceforge.saxon', name: 'saxon', version: '9.1.0.8', classifier: 'xpath'
+    implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    implementation group: 'junit', name: 'junit', version: '4.+'
 }
